@@ -7,10 +7,11 @@
 
 package org.elasticsearch.xpack.esql.optimizer.rules.physical.local;
 
+import org.elasticsearch.compute.aggregation.AggregatorMode;
+import org.elasticsearch.xpack.esql.approximation.ApproximationPlan;
 import org.elasticsearch.xpack.esql.core.expression.Alias;
-import org.elasticsearch.xpack.esql.core.expression.Attribute;
+import org.elasticsearch.xpack.esql.core.expression.AttributeSet;
 import org.elasticsearch.xpack.esql.core.expression.Literal;
-import org.elasticsearch.xpack.esql.core.expression.NamedExpression;
 import org.elasticsearch.xpack.esql.core.tree.Source;
 import org.elasticsearch.xpack.esql.optimizer.LocalPhysicalOptimizerContext;
 import org.elasticsearch.xpack.esql.optimizer.PhysicalOptimizerRules;
@@ -22,10 +23,25 @@ import org.elasticsearch.xpack.esql.plan.physical.PhysicalPlan;
 import org.elasticsearch.xpack.esql.plan.physical.SampledAggregateExec;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
- * Looks for the case where certain stats exist right before the query and thus can be pushed down.
+ * If the original aggregate wrapped by the sampled aggregate can be
+ * pushed down to Lucene (so that it will execute exact and fast), sampling
+ * should be skipped and the original aggregate should be executed.
+ * <p>
+ * In that case, this rule replaces the sampled aggregate by a regular
+ * aggregate and nullifies all buckets. The plan:
+ * <pre>
+ * {@code FROM data | EVAL bucket_id=... | SAMPLED_STATS original_aggs, bucket_aggs}
+ * </pre>
+ * is transformed into:
+ * <pre>
+ * {@code FROM data | EVAL bucket_id=... | STATS original_aggs | EVAL bucket_aggs=NULL}
+ * </pre>
+ * All buckets being NULL indicates to the coordinator that the stats are exact.
+ * <p>
+ * The aggregate created by this rule is pushed down to Lucene by the
+ * {@link PushStatsToSource} rule, whose logic is reused here.
  */
 public class ReplaceSampledStatsByExactStats extends PhysicalOptimizerRules.ParameterizedOptimizerRule<
     SampledAggregateExec,
@@ -33,13 +49,18 @@ public class ReplaceSampledStatsByExactStats extends PhysicalOptimizerRules.Para
 
     @Override
     protected PhysicalPlan rule(SampledAggregateExec sampledAggregateExec, LocalPhysicalOptimizerContext context) {
-        if (sampledAggregateExec.child() instanceof EvalExec evalExec
+        if (sampledAggregateExec.getMode() == AggregatorMode.INITIAL
+            && sampledAggregateExec.child() instanceof EvalExec evalExec
             && evalExec.expressions().size() == 1
             && evalExec.expressions().getFirst() instanceof Alias alias
-            && alias.name().equals("$bucket_id")
+            && alias.name().equals(ApproximationPlan.BUCKET_ID_COLUMN_NAME)
             && evalExec.child() instanceof EsQueryExec queryExec) {
 
-            var tuple = PushStatsToSource.pushableStats(sampledAggregateExec.groupings(), sampledAggregateExec.originalAggregates(), context);
+            var tuple = PushStatsToSource.pushableStats(
+                sampledAggregateExec.groupings(),
+                sampledAggregateExec.originalAggregates(),
+                context
+            );
 
             // for the moment support pushing count just for one field
             List<EsStatsQueryExec.Stat> stats = tuple.v2();
@@ -48,26 +69,18 @@ public class ReplaceSampledStatsByExactStats extends PhysicalOptimizerRules.Para
             }
 
             List<Alias> nullBuckets = sampledAggregateExec.outputSet()
+                .subtract(AttributeSet.of(sampledAggregateExec.originalIntermediateAttributes()))
                 .stream()
-                .filter(attr -> attr.name().contains("$bucket$"))
                 .map(attr -> new Alias(Source.EMPTY, attr.name(), Literal.NULL, attr.id()))
-                .collect(Collectors.toList());
-            List<NamedExpression> aggregates = sampledAggregateExec.aggregates()
-                .stream()
-                .filter(attr -> attr.name().contains("$bucket$") == false)
-                .collect(Collectors.toList());
-            List<Attribute> intermediateAttributes = sampledAggregateExec.intermediateAttributes()
-                .stream()
-                .filter(attr -> attr.name().contains("$bucket$") == false)
-                .collect(Collectors.toList());
+                .toList();
 
             PhysicalPlan plan = new AggregateExec(
                 sampledAggregateExec.source(),
                 queryExec,
                 sampledAggregateExec.groupings(),
-                aggregates,
+                sampledAggregateExec.originalAggregates(),
                 sampledAggregateExec.getMode(),
-                intermediateAttributes,
+                sampledAggregateExec.originalIntermediateAttributes(),
                 sampledAggregateExec.estimatedRowSize()
             );
 
